--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1063,13 +1063,13 @@ body.modal-open {
   align-items: stretch;
 }
 .collection_premium_section .card_inner p {
-  padding: 16px 21px;
+  padding: 12px 14px;
   background-color: #ffffff;
   width: 100%;
   text-align: left;
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
 }
 .collection_premium_section .card_inner img {
   width: 100%;
@@ -1188,7 +1188,7 @@ body.modal-open {
 }
 .premium_product_page .slider_column .slider__wishlist img {
   max-width: 20px;
-  margin-left: 2px;
+  /* margin-left: 2px; */
   margin-top: 2px;
   object-fit: contain;
 }
