--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2347,16 +2347,49 @@ body.modal-open {
 .premium_product_page .img_showproduct img {
   min-width: 100%;
 }
+
 .bundle_multiple_img_slider,
 .premium_multiple_img_slider {
   display: flex;
   margin: 0 -9px;
   justify-content: center;
 }
-
+.bundle_multiple_img_slider {
+  overflow: auto;
+  justify-content: start;
+}
 .premium_product_page .slider__item {
   margin: 0 9px;
 }
+.bundle_multiple_img_slider .slider__item {
+  width: calc(16.666% - 18px);
+  min-width: calc(16.666% - 18px);
+}
+
+/* Scroll bar css start */
+.premium_multiple_img_slider::-webkit-scrollbar,
+.bundle_multiple_img_slider::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+.premium_multiple_img_slider::-webkit-scrollbar-track,
+.bundle_multiple_img_slider::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+.premium_multiple_img_slider::-webkit-scrollbar-thumb,
+.bundle_multiple_img_slider::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: var(--primary-color);
+  -webkit-box-shadow: inset 0 0 6px var(--primary-color);
+}
+.premium_multiple_img_slider::-webkit-scrollbar-thumb:window-inactive,
+.bundle_multiple_img_slider::-webkit-scrollbar-thumb:window-inactive {
+  background: var(--primary-color);
+}
+/* Scroll bar css end */
 
 .premium_product_page .slider__item:hover {
   opacity: 0.8;
@@ -2504,6 +2537,15 @@ header .dropdown-menu .dropdown-item:hover {
   .checkout_cart_btn_column {
     width: 100%;
     margin-top: 30px;
+  }
+  .premium_multiple_img_slider {
+    overflow: auto;
+    justify-content: start;
+  }
+  .premium_multiple_img_slider .slider__item,
+  .bundle_multiple_img_slider .slider__item {
+    width: calc(25% - 18px);
+    min-width: calc(25% - 18px);
   }
 }
 
