--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2133,20 +2133,20 @@ body.modal-open {
   margin: 0 -17px;
 }
 #warning_message {
-  background-color: white;
   border-radius: 0 !important;
 }
 #warning_message {
   max-width: 530px;
 }
 #warning_message {
-  padding: 34px 23px;
+  padding: 10px 0;
 }
 #warning_message h5 {
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
   margin-bottom: 20px;
+  color: #800000;
 }
 #warning_message p {
   font-size: 14px;
@@ -2465,6 +2465,105 @@ header .dropdown-menu .dropdown-item:hover {
   background-color: #eaeaea;
 }
 
+.nav-item,
+.get-product {
+  cursor: pointer;
+}
+.related-key-words-tags,
+.related-key-words-tags a {
+  color: gray;
+}
+.related-key-words-tags {
+  display: flex;
+  flex-wrap: wrap;
+}
+.related-key-words-tags a {
+  margin: 0 8px 8px 0;
+  text-decoration: none;
+  background-color: #f5f5f7;
+  border: 0;
+  color: #656565;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.2;
+  transition: all 0.4s;
+  white-space: nowrap;
+  padding: 7px 20px;
+  border-radius: 30px;
+}
+.checkout_row .order__column .payment_option {
+  margin-top: 20px;
+}
+.checkout_row .order__column .payment_option .product-title {
+  margin-bottom: 10px;
+}
+.checkout_row .order__column .payment_option label {
+  margin-bottom: 0;
+  min-width: 45px;
+  text-transform: uppercase;
+}
+.checkout_row .order__column .payment_option input {
+  height: 20px;
+  width: 20px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-radius: 50%;
+  border: 2px solid var(--primary-color);
+  background-color: #fff;
+  cursor: pointer;
+  margin-left: 7px;
+}
+.checkout_row .order__column .payment_option input[type="radio"]:checked {
+  background-color: var(--primary-color);
+}
+.checkout_row .order__column .payment_option .paypal_item {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.checkout_row
+  .order__column
+  .payment_option
+  .paypal_item
+  .paypal-button-container {
+  width: 100%;
+}
+.checkout_row .order__column .payment_option .icon_payment {
+  display: flex;
+  margin-bottom: 13px;
+}
+.checkout_row .order__column .payment_option .icon_payment img {
+  height: 25px;
+  object-fit: contain;
+  margin-right: 10px;
+}
+.cart__page .get_premium_mockups_section .section_heading {
+  font-size: 26px;
+  line-height: 24px;
+}
+.cart__page .get_premium_mockups_section .section_heading span {
+  font-size: 14px;
+  line-height: 24px;
+  color: #696969;
+  margin-top: 2px;
+}
+.cart__page .get_premium_mockups_section span.primary_color {
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 500;
+  max-width: 143px;
+  margin: 0 auto;
+  margin-top: 12px;
+  margin-bottom: 52px;
+}
+.cart__page .get_premium_mockups_section ._btn {
+  width: 100%;
+}
+.cart__page .get_premium_mockups_section .premium_mockups_inner {
+  padding: 30px 40px;
+}
+
 /*
 
   *
@@ -2702,6 +2801,7 @@ header .dropdown-menu .dropdown-item:hover {
     margin-top: 15px;
     margin-bottom: 15px;
   }
+  .cart__page .get_premium_mockups_section .premium_mockups_inner,
   .checkout_cart_btn_column .inner_col {
     padding: 25px;
   }
@@ -2711,13 +2811,4 @@ header .dropdown-menu .dropdown-item:hover {
   .signup__login .main_content {
     border-radius: 15px;
   }
-}
-
-.nav-item,
-.get-product {
-  cursor: pointer;
-}
-.related-key-words-tags,
-.related-key-words-tags a {
-  color: gray;
 }
